@@ -1,0 +1,36 @@
+/*
+    <one line to give the program's name and a brief idea of what it does.>
+    Copyright (C) <year>  <name of author>
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+*/
+
+#include "Selector.h"
+#include "ModuleFactory.h"
+
+#include "registermodule_macro.cpp"
+
+M_REGISTER(Selector);
+
+Selector::Selector()  : DataAbstractModule(2,1,1) {
+}
+
+Selector::~Selector() {
+}
+
+QString Selector::identify() {
+    return ID;
+}
+
